# mcu-co_firmware

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  TODO.md  buildmcu-co.sh  cppcheck.supp  serial_test.py
cmake/: toolchain-arm-none-eabi.cmake
data_structures/: ring-buffer.c  ring-buffer.h
drivers/: clock.h  gpio.c  gpio.h  uart.c  uart.h
include/: logger.h
peripherals/: gpio.h  uart.c  uart.h
peripherals/documentation/: GPIO.md  UART.md
src/: main.c  system_stm32g4xx.c
src/log/: logger.c
